--- a/naokisin.html
+++ b/naokisin.html
@@ -1,12 +1,19 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>なおきしん</title>
 </head>
 <body>
-    <p>練習</p>
-    <p>もっと練習</p>
+    <h1>なおきしん / Naoki-sin</h1>
+    <img src="Z:\Y7094\その他\2QSD0z3I_400x400.jpg" sizes="4">
+    <p>
+        石鹸屋とVTuberが大好きな学生<br>推しはヒメヒナ🥕 日ノ森あんず🍠だてんちゆあ🔯兎鞠まり🥕<br>
+        最近ハマっているゲームはテトリス<br><br>
+        twitter : <a href="https://twitter.com/NaokisinSub">@NaokisinSub</a>
+        ​</p>
 </body>
 </html>
