--- a/naokisin.html
+++ b/naokisin.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>なおきしん / Naoki-sin</h1>
-    <img src="Z:\Y7094\その他\2QSD0z3I_400x400.jpg" sizes="4">
+    <img src="2QSD0z3I_400x400.jpg" sizes="4">
     <p>
         石鹸屋とVTuberが大好きな学生<br>推しはヒメヒナ🥕 日ノ森あんず🍠だてんちゆあ🔯兎鞠まり🥕<br>
         最近ハマっているゲームはテトリス<br><br>
