--- a/naokisin.html
+++ b/naokisin.html
@@ -13,7 +13,9 @@
     <p>
         石鹸屋とVTuberが大好きな学生<br>推しはヒメヒナ🥕 日ノ森あんず🍠だてんちゆあ🔯兎鞠まり🥕<br>
         最近ハマっているゲームはテトリス<br><br>
-        twitter : <a href="https://twitter.com/NaokisinSub">@NaokisinSub</a>
+        twitter : <a href="https://twitter.com/NaokisinSub">@NaokisinSub</a><br><br><br>
+        なんか<br>
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=rCVkyga6Uxo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         ​</p>
 </body>
 </html>
