--- a/naokisin.html
+++ b/naokisin.html
@@ -16,6 +16,6 @@
         twitter : <a href="https://twitter.com/NaokisinSub">@NaokisinSub</a><br><br><br>
         なんか<br>
         ​</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=rCVkyga6Uxo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/rCVkyga6Uxo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
